# rust-graphviz

./: Cargo.toml  build.rs
src/: enums.rs  error.rs  lib.rs  main.rs  utils.rs
test_files/: graph.dot
