[package]
name = "graphviz"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2018"
description = "Safe graphviz wrapper"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphviz-sys = { git = "https://github.com/tcheinen/graphviz-sys" }
libc = "0.2"